# fastpubsub

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.sample  pyproject.toml  ruff.toml
.github/workflows/: docker-push.yml  lint-and-tests.yml
fastpubsub/: api.py  config.py  database.py  exceptions.py  logger.py  main.py  models.py  sanitizer.py  services.py
fastpubsub/api/: __init__.py  app.py  helpers.py  middlewares.py  server.py
fastpubsub/api/routers/: __init__.py  clients.py  monitoring.py  subscriptions.py  topics.py
fastpubsub/services/: __init__.py  auth.py  clients.py  helpers.py  messages.py  subscriptions.py  topics.py
migrations/: env.py
migrations/versions/: 001_3aacd9174d1f_bootstrap.py  002_3818df3592a5_new_migration.py
tests/: conftest.py  helpers.py  test_api.py  test_config.py  test_models.py  test_sanitizer.py  test_services.py
tests/api/routers/: test_clients.py  test_monitoring.py  test_subscriptions.py  test_topics.py
tests/services/: test_auth.py  test_clients.py  test_messages.py  test_subscriptions.py  test_topics.py
