[project]
name = "fastpubsub"
version = "0.1.0"
description = "Simple pubsub system based on FastAPI and PostgreSQL"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.17.2,<2",
    "fastapi[standard]>=0.127.1,<1",
    "gunicorn>=23.0.0,<24",
    "orjson>=3.11.5,<4",
    "psycopg>=3.3.2,<4",
    "python-json-logger>=4.0.0,<5",
    "sqlalchemy>=2.0.45,<3",
    "typer>=0.21.0,<1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-vvv --cov=fastpubsub --cov-report=term-missing"
